# ckanext-dc_view

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  Vagrantfile  docker-ci.env  docker-compose.ci.yml  docker-run-tests.sh  docker-test.ini  pyproject.toml  requirements.txt  setup.py  vagrant-run-tests.sh
.github/workflows/: check.yml  deploy_pypi.yml
ckanext/dc_view/: cli.py  jobs.py  meta.py  plugin.py  route_funcs.py
ckanext/dc_view/assets/: dc_view.css  webassets.yml
ckanext/dc_view/templates/: dc_view.html
ckanext/dc_view/tests/: helper_methods.py  requirements.txt  test_jobs.py  test_plugin.py  test_route.py
